# matrix

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.sh
cmake/: define.cmake  dist.cmake  matrix.h.in  message.cmake  mtrx_auto_config.h.in  mtrx_auto_headers.h.in  set_variables.cmake  test.cmake
src/core/: matrix.c  mtrx_config.h
src/os/unix/: CMakeLists.txt  mtrx_alloc.c  mtrx_alloc.h  mtrx_os.h
src/os/unix/darwin/: mtrx_darwin.h  mtrx_darwin_config.h  mtrx_darwin_init.c
src/os/unix/freebsd/: mtrx_freebsd.h  mtrx_freebsd_config.h
src/os/unix/linux/: mtrx_linux.h  mtrx_linux_config.h
src/os/unix/posix/: mtrx_posix_config.h
src/os/win32/: CMakeLists.txt  mtrx_os.h  mtrx_win32_config.h
